// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flowcolumns Components should render CommentColumn 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-comment"
        >
          I'm a comment!
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-tcp"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-plain"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 3`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-not-modified"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 4`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-redirect"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 5`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-image"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 6`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-js"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 7`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-css"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 8`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-document"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 9`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-plain"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render IconColumn 10`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-websocket"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render TimeColumn 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-time"
        >
          5s
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render TimeColumn 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-time"
        >
          5s
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render pathColumn 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-path"
        >
          <i
            class="fa fa-fw fa-exclamation pull-right"
          />
          <span
            class="marker pull-right"
          />
          http://address:22/path
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Flowcolumns Components should render pathColumn 2`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-path"
        >
          <i
            class="fa fa-fw fa-pause pull-right"
          />
          <i
            class="fa fa-fw fa-times pull-right"
          />
          <span
            class="marker pull-right"
          />
          http://address:22/path
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: comment 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-comment"
        >
          I'm a comment!
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: icon 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-icon"
        >
          <div
            class="resource-icon resource-icon-websocket"
          />
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: index 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-index"
        >
          1
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: method 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-method"
        >
          WSS
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: path 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-path"
        >
          <i
            class="fa fa-fw fa-exclamation pull-right"
          />
          <span
            class="marker pull-right"
          />
          http://address:22/path
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: quickactions 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-quickactions"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: size 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-size"
        >
          43b
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: status 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-status"
          style="color: darkgreen;"
        >
          200
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: time 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-time"
        >
          5s
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: timestamp 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-timestamp"
        >
          1999-12-31 23:00:00.000
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: tls 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-tls col-tls-https"
        />
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`should render columns: version 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr>
        <td
          class="col-http-version"
        >
          HTTP/1.1
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
